[package]
name = "debridge-solana-sdk"
version = "0.0.0"
publish = false
edition = "2021"

[features]
default = ["prod"]
prod = []
env = []

[dependencies]
solana-program = "=1.14.6"
borsh = "0.9.1"
hex = "0.4.3"
thiserror = "1.0.30"
lazy_static = "1.4.0"
sha3 = "0.10.6"
env_to_array = "0.1.1"
cfg-match = "0.2.1"
derive_builder = "0.12.0"

