[package]
name = "sdk-example-root"
version = "0.0.0"
publish = false
edition = "2021"
resolver = "2"


[workspace]
members = [
    "programs/*",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
anchor-lang = "0.26.0"
base58 = "0.2.0"
borsh = "0.9.1"
debridge-solana-sdk = {path = "../"}
debridge-solana-sdk-example = { path = "programs/debridge-solana-sdk-example" }
dirs = "4.0"
env_to_array = "0.1.1"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
rstest = "0.12.0"
sha3 = "0.10.6"
simple_logger = "1.13.0"
solana-client = "1.14.6"
solana-program = "=1.14.6"
solana-sdk = "1.10.41"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
spl-token = "3.1.11"
spl-associated-token-account = { version ="1.1.1", features = ["no-entrypoint"] }