[package]
name = "debridge-solana-sdk-example"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "debridge_solana_sdk_example"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version ="1.1.1", features = ["no-entrypoint"] }
env_to_array = "0.1.1"
debridge-solana-sdk = {path = "../../../"}
