[package]
name = "debridge-solana-sdk-example"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "debridge_invoke_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"

debridge-sdk = {path = "../../../"}
